academia-2021/force-app/main/default/objects/Case/fields/Motivo_de_la_devolucion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_la_devolucion__c</fullName>
    <label>Motivo de la devolución</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producto averiado</fullName>
            </value>
            <value>
                <fullName>Producto incorrecto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>