academia-2021/force-app/main/default/objects/Case/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <type>Lookup</type>
</CustomField>