academia-2021/force-app/main/default/objects/Case/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Etapa 1</fullName>
            </value>
            <value>
                <fullName>Etapa 2</fullName>
            </value>
            <value>
                <fullName>Etapa 3</fullName>
            </value>
            <value>
                <fullName>Etapa 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>