academia-2021/force-app/main/default/objects/Case/fields/Switch__c.field-meta.xml
<CustomField>
    <fullName>Switch__c</fullName>
    <label>Switch</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pantalla</fullName>
            </value>
            <value>
                <fullName>Joycons</fullName>
            </value>
            <value>
                <fullName>Wi-Fi</fullName>
            </value>
            <value>
                <fullName>Cartuchos</fullName>
            </value>
            <value>
                <fullName>Sticks</fullName>
            </value>
            <value>
                <fullName>Pantalla DS</fullName>
            </value>
            <value>
                <fullName>Wi-Fi DS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>