academia-2021/force-app/main/default/objects/Case/recordTypes/Aclaraciones.recordType-meta.xml
<RecordType>
    <fullName>Aclaraciones</fullName>
    <active>true</active>
    <businessProcess>Aclaraciones</businessProcess>
    <label>Aclaraciones</label>
</RecordType>