academia-2021/force-app/main/default/objects/Case/recordTypes/Aftersales_service.recordType-meta.xml
<RecordType>
    <fullName>Aftersales_service</fullName>
    <active>true</active>
    <businessProcess>After-sales service</businessProcess>
    <label>After-sales service</label>
</RecordType>