academia-2021/force-app/main/default/objects/Case/recordTypes/Devolucion.recordType-meta.xml
<RecordType>
    <fullName>Devolucion</fullName>
    <active>true</active>
    <businessProcess>Devolución</businessProcess>
    <label>Devolución</label>
</RecordType>