academia-2021/force-app/main/default/objects/Case/recordTypes/Generico.recordType-meta.xml
<RecordType>
    <fullName>Generico</fullName>
    <active>true</active>
    <businessProcess>Genérico</businessProcess>
    <label>Genérico</label>
</RecordType>