academia-2021/force-app/main/default/objects/Case/recordTypes/pUNTO4a.recordType-meta.xml
<RecordType>
    <fullName>pUNTO4a</fullName>
    <active>false</active>
    <businessProcess>Returns and refunds</businessProcess>
    <label>Create a new permission set called “Access to After-sales service” and provide a</label>
</RecordType>