academia-2021/force-app/main/default/objects/Case/recordTypes/Quejas.recordType-meta.xml
<RecordType>
    <fullName>Quejas</fullName>
    <active>true</active>
    <businessProcess>Quejas</businessProcess>
    <label>Quejas</label>
</RecordType>