academia-2021/force-app/main/default/objects/Case/recordTypes/Returns_and_refunds.recordType-meta.xml
<RecordType>
    <fullName>Returns_and_refunds</fullName>
    <active>true</active>
    <businessProcess>Returns and refunds</businessProcess>
    <label>Returns and refunds</label>
</RecordType>