academia-2021/force-app/main/default/objects/Case/recordTypes/Soporte_Tecnico.recordType-meta.xml
<RecordType>
    <fullName>Soporte_Tecnico</fullName>
    <active>true</active>
    <businessProcess>Soporte Técnico</businessProcess>
    <label>Soporte Técnico</label>
</RecordType>