academia-2021/force-app/main/default/objects/Case/listViews/Quejas_Case.listView-meta.xml
<ListView>
    <fullName>Quejas_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Quejas</label>
    <queue>Quejas</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>